--- a/templates/quiz/quiz_list.html
+++ b/templates/quiz/quiz_list.html
@@ -3,9 +3,16 @@
 
 {% block content %}
 	{% if object_list %}
-		<h1>{% trans "Please select quiz category" %}</h1>
+	<div class="page-header">
+		<a class="btn pull-right" href="{% url upload-quiz %}">{% trans "Upload quiz" %}</a>
+		<h1>{% trans "Please select quiz category" %}</h1>	
+	</div>
+		<table class="table">
 		{% for o in object_list %}
-			<a href="{% url quiz-questions o.id %}">{{ o.name }}</a>
+			<tr>
+			<td><a href="{% url quiz-questions o.id %}"><h4>{{ o.name }}</h4></a><td>
+			</tr>
 		{% endfor %}
+		<table>
 	{% endif %}
 {% endblock %}
