Add encoding to quiz upload form

--- a/templates/quiz/upload_quiz.html
+++ b/templates/quiz/upload_quiz.html
@@ -22,6 +22,12 @@
         {{ form.quiz }}
       </div>
     </div>
+    <div class="control-group">
+      <label class="control-label" for="quiz">{{ form.encoding.label }}</label>
+      <div class="controls">
+        {{ form.encoding }}
+      </div>
+    </div>
     <div class="form-actions">
 	 <input type="submit" value="{% trans "Upload" %}" />
 	</div>
